# patience_diff

./: CHANGES.md  INSTALL.txt  LICENSE.md  META.ab  Makefile  _oasis  _tags  install.ml  myocamlbuild.ml  opam  patience_diff.opam  setup.ml
js-utils/: install_tags.ml
lib/: META  patience_diff.ml  patience_diff.mldylib  patience_diff.mli  patience_diff_lib.mllib  patience_diff_lib.mlpack  plain_diff.ml  std.ml
src/: dune  hunk.ml  hunk.mli  hunks.ml  hunks.mli  jbuild  matching_block.ml  matching_block.mli  move_id.ml  move_id.mli  move_kind.ml  move_kind.mli  patience_diff.ml  patience_diff.mli  patience_diff_intf.ml  plain_diff.ml  plain_diff.mli  range.ml  range.mli
test/: dune  import.ml  jbuild  patience_diff_lib_test.ml  test_limit_context.ml  test_merge_diff.ml  test_plain_diff_cutoff.ml
