opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/patience_diff"
bug-reports: "https://github.com/janestreet/patience_diff/issues"
dev-repo: "git+https://github.com/janestreet/patience_diff.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/patience_diff/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Diff library using Bram Cohen's patience diff algorithm"
description: "
"
